[package]
name = "_handly_background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi"] }
cxx = "1.0"
rand = "0.8.4"
angular = "0.1.1"
battery = "0.7.8"

[build-dependencies]
cxx-build = "1.0"